--- a/toc.yaml
+++ b/toc.yaml
@@ -37,6 +37,7 @@ toc:
         - vpc-presets.md
         - topic: prereqs.md
           navtitle: Before you begin deploying
+        - fiops-storage.md
 
     - navgroup:
         id: deploy
