docs: imporve docs

--- a/toc.yaml
+++ b/toc.yaml
@@ -2,13 +2,14 @@
 toc:
   properties:
     subcollection: sap-powervs
-    industry: ITServiceManagement
-    use-case: Technology
-    compliance: SAPCertified
     audience: solution
     content-type: deployment
+    use-case: Technology
+    category: solution_docs
+    compliance: SAPCertified
     href: /docs/sap-powervs
     path: sap-powervs
+    industry: ITServiceManagement
     deployable: true
     description: Deploy your first SAP-ready landscape by using SAP solution provisioning with a deployable architecture.
     label: Power Systems Virtual Server for SAP HANA
@@ -17,67 +18,70 @@ toc:
     - navgroup:
         id: overview
         topics:
-        - topic: overview.md
-          navtitle: Overview
-        - topic: release-notes.md
-          navtitle: Release notes
+          - navtitle: Overview
+            topic: overview.md
+          - navtitle: Release notes
+            topic: release-notes.md
 
     - navgroup:
         id: architecture
         topics:
-        - include: ../deployable-reference-architectures/terraform-ibm-powervs-sap/sap-ready-to-go/deploy-arch-ibm-pvs-sap-ready-to-go.md
-          navtitle: SAP ready PowerVS variation
-        - include: ../deployable-reference-architectures/terraform-ibm-powervs-sap/sap-s4hana-bw4hana/deploy-arch-ibm-pvs-sap-s4hana-bw4hana.md
-          navtitle: SAP S/4HANA or BW/4HANA variation
+          - navtitle: SAP ready PowerVS variation
+            include: ../deployable-reference-architectures/terraform-ibm-powervs-sap/sap-ready-to-go/deploy-arch-ibm-pvs-sap-ready-to-go.md
+          - navtitle: SAP S/4HANA or BW/4HANA variation
+            include: ../deployable-reference-architectures/terraform-ibm-powervs-sap/sap-s4hana-bw4hana/deploy-arch-ibm-pvs-sap-s4hana-bw4hana.md
 
     - navgroup:
         id: plan
         topics:
-        - dependencies.md
-        - vpc-presets.md
-        - topic: prereqs.md
-          navtitle: Before you begin deploying
+          - navtitle: Dependencies
+            topic: dependencies.md
+          - navtitle: Power Virtual Server with VPC landing zone preset
+            topic: vpc-presets.md
+          - navtitle: Before you begin deploying
+            topic: prereqs.md
 
     - navgroup:
         id: deploy
         topics:
-        - topic: deploy.md
-          navtitle: Deploying the architecture
-        - mgmt-monitoring.md
-        - access.md
+          - navtitle: Deploying the SAP Ready PowerVS variation
+            topic: deploy-sap-ready-powervs.md
+
+          - navtitle: Deploying the SAP S/4HANA or BW/4HANA variation
+            topic: deploy-sap-s4hana-bw4hana.md
 
     - navgroup:
         id: reference
         topics:
-        - security-and-compliance.md
-        - topic: responsibilities.md
-          navtitle: Responsibilities
+          - navtitle: Responsibilities
+            topic: responsibilities.md
 
     - navgroup:
         id: help
         topics:
-        - topic: support.md
-          navtitle: Getting help and support
-        - topic: faqs.md
-          navtitle: FAQs
-        - topicgroup:
-            label: Troubleshooting
-            topics:
-            - topicgroup:
-                label: Troubleshooting deployment
-                topics:
-                - troubleshoot-deploy.md
-            - topicgroup:
-                label: Troubleshooting Schematics
-                topics:
-                - include: ../schematics/troubleshooting/apply_500_errors.md
-                  navtitle: Why am I getting 5xx errors in Schematics?
-                - include: ../schematics/troubleshooting/apply_nullresource.md
-                  navtitle: How can I find the root cause of Schematics apply failures?
-            - topicgroup:
-                label: Troubleshooting projects
-                topics:
-                - include: ../secure-enterprise/ts-needs-attention.md
-                  navtitle: How do I address a failed validation?
-                - include: ../secure-enterprise/ts-deploy.md
-                  navtitle: How do I address a failed deployment?
+          - navtitle: Getting help and support
+            topic: support.md
+          - navtitle: FAQs
+            topic: faqs.md
+          - topicgroup:
+              label: Troubleshooting
+              topics:
+                - topicgroup:
+                    label: Troubleshooting deployment
+                    topics:
+                      - navtitle: My deployment failed, how do I proceed?
+                        topic: troubleshoot-deploy.md
+                - topicgroup:
+                    label: Troubleshooting Schematics
+                    topics:
+                      - navtitle: Why am I getting 5xx errors in Schematics?
+                        include: ../schematics/troubleshooting/apply_500_errors.md
+                      - navtitle: How can I find the root cause of Schematics apply failures?
+                        include: ../schematics/troubleshooting/apply_nullresource.md
+                - topicgroup:
+                    label: Troubleshooting projects
+                    topics:
+                      - navtitle: How do I address a failed validation?
+                        include: ../secure-enterprise/ts-needs-attention.md
+                      - navtitle: How do I address a failed deployment?
+                        include: ../secure-enterprise/ts-deploy.md
