--- a/toc.yaml
+++ b/toc.yaml
@@ -13,74 +13,53 @@ toc:
     deployable: true
     description: Deploy your first SAP-ready landscape by using SAP solution provisioning with a deployable architecture.
     label: Power Systems Virtual Server for SAP HANA
-
   entries:
     - navgroup:
         id: overview
         topics:
           - navtitle: Overview
-            topic: overview.md
+            topic: overview-overview.md
           - navtitle: Release notes
-            topic: release-notes.md
-
+            topic: overview-release-notes.md
     - navgroup:
         id: architecture
         topics:
-          - navtitle: SAP ready PowerVS
+          - navtitle: SAP Ready PowerVS
             include: ../deployable-reference-architectures/terraform-ibm-powervs-sap/sap-ready-to-go/deploy-arch-ibm-pvs-sap-ready-to-go.md
           - navtitle: SAP S/4HANA or BW/4HANA
             include: ../deployable-reference-architectures/terraform-ibm-powervs-sap/sap-s4hana-bw4hana/deploy-arch-ibm-pvs-sap-s4hana-bw4hana.md
-
     - navgroup:
         id: plan
         topics:
           - navtitle: Dependencies
-            topic: dependencies.md
+            topic: plan-dependencies.md
           - navtitle: Before you begin deploying
-            topic: planning.md
-
+            topic: plan-planning.md
+          - navtitle: Prepare HANA binaries in COS
+            topic: plan-create-cos-instance.md
     - navgroup:
         id: deploy
         topics:
           - navtitle: Deploy using Projects
-            topic: deploying.md
-
+            topic: deploy-deploying.md
     - navgroup:
         id: tutorial
         topics:
           - navtitle: Connect by using a client-to-site VPN
-            topic: connect-client-vpn.md
+            topic: tutorial-connect-client-vpn.md
           - navtitle: Connect using Floating IP
-            topic: connect-jump-ssh.md
-
+            topic: tutorial-connect-jump-ssh.md
     - navgroup:
         id: reference
         topics:
           - navtitle: Responsibilities
-            topic: shared-responsibilities.md
-
+            topic: reference-shared-responsibilities.md
     - navgroup:
         id: help
         topics:
-          - navtitle: Getting help and support
-            topic: support.md
-          - navtitle: FAQs
-            topic: faqs.md
           - topicgroup:
               label: Troubleshooting
               topics:
-                - topicgroup:
-                    label: Troubleshooting deployment
-                    topics:
-                      - navtitle: My deployment failed, how do I proceed?
-                        topic: troubleshoot-deploy.md
-                - topicgroup:
-                    label: Troubleshooting Schematics
-                    topics:
-                      - navtitle: Why am I getting 5xx errors in Schematics?
-                        include: ../schematics/troubleshooting/apply_500_errors.md
-                      - navtitle: How can I find the root cause of Schematics apply failures?
-                        include: ../schematics/troubleshooting/apply_nullresource.md
                 - topicgroup:
                     label: Troubleshooting projects
                     topics:
@@ -88,3 +67,12 @@ toc:
                         include: ../secure-enterprise/ts-needs-attention.md
                       - navtitle: How do I address a failed deployment?
                         include: ../secure-enterprise/ts-deploy.md
+                - topicgroup:
+                    label: Troubleshooting deployment
+                    topics:
+                      - navtitle: My deployment failed, how do I proceed?
+                        topic: help-troubleshoot-deploy.md
+          - navtitle: Getting help and support
+            topic: help-support.md
+          - navtitle: FAQs
+            topic: help-faqs.md
